feat: documentando api
